--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -1,17 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-here is news
-<br>
 {% for one_tag in tag %}
-<a href={% url 'news_by_tag' pk=one_tag.pk %}>{{one_tag.name}}</a>
+<a href={% url 'news_by_tag' pk=one_tag.pk %}><span class="badge bg-secondary">#{{one_tag.name}}</span></a>
 {% endfor %}
 {% for one_news in news %}
-
-<h1>{{one_news.title}}</h1>
-<font color='yellow'>{{one_news.text}}</font>
-<font color='red'>#{{one_news.tag}}</font>
-<a href={% url 'news_detail' pk=one_news.pk %}>читать польностью</a>
+<div class="card text-center">
+    <div class="card-header">
+      <ul class="nav nav-tabs card-header-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="true" href={% url 'news_detail' pk=one_news.pk %}>Active</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href={% url 'news_detail' pk=one_news.pk %}>Link</a>
+        </li>
+      </ul>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">{{one_news.title}}</h5>
+      <p class="card-text">{{one_news.text}} <font color='red'>#{{one_news.tag}}</font></p>
+      <a href={% url 'news_detail' pk=one_news.pk %} class="btn btn-primary">Читать полностью</a>
+    </div>
+  </div>
 
 {% endfor %}
 {% endblock %}
