--- a/templates/news/news_detail.html
+++ b/templates/news/news_detail.html
@@ -1,4 +1,13 @@
-<h2>Страница одной новости</h2>
-И ЭТА НОВОСТЬ
-<h1>{{news_detail.title}}</h1>
-<font color='green'>{{news_detail.text}}</font>
+{% extends 'base.html' %}
+{% block content %}
+<div class="card">
+    <div class="card-header">
+      Внимание!
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">{{news_detail.title}}</h5>
+      <p class="card-text">{{news_detail.text}}</p>
+    </div>
+  </div>
+
+{% endblock %}
