--- a/templates/userinfo/index.html
+++ b/templates/userinfo/index.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Describe your bisness</h1>
 <h1>Product</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/i1FFdmNE_8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -6,3 +8,4 @@
     <button type="submit">Save</button>
 </form>
 contacts
+{% endblock %}
