--- a/templates/userinfo/index.html
+++ b/templates/userinfo/index.html
@@ -2,10 +2,40 @@
 {% block content %}
 <h1>Describe your bisness</h1>
 <h1>Product</h1>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="http://s3files.core77.com/blog/images/2012/07/tharp-procter-and-gamble.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="http://s3files.core77.com/blog/images/2012/07/tharp-procter-and-gamble.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="http://s3files.core77.com/blog/images/2012/07/tharp-procter-and-gamble.png" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/i1FFdmNE_8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <form method="POST">{% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Save</button>
 </form>
-contacts
+<div class="card">
+    <div class="card-body">
+      наши контакты
+    </div>
+  </div>
 {% endblock %}
